api/s2n.h


#define S2N_SUCCESS 0
#define S2N_FAILURE -1
typedef enum {
    S2N_ERR_T_OK = 0,
    S2N_ERR_T_IO,
    S2N_ERR_T_CLOSED,
    S2N_ERR_T_BLOCKED,
    S2N_ERR_T_ALERT,
    S2N_ERR_T_PROTO,
    S2N_ERR_T_INTERNAL,
    S2N_ERR_T_USAGE
} s2n_error_type;
struct s2n_connection;
struct s2n_client_hello;
S2N_API extern int s2n_client_hello_get_server_name_length(struct s2n_client_hello *ch, uint16_t *length);
S2N_API extern int s2n_client_hello_get_server_name(struct s2n_client_hello *ch, uint8_t *server_name, uint16_t length, uint16_t *out_length);
S2N_API extern int s2n_connection_set_fd(struct s2n_connection *conn, int fd);
S2N_API extern int s2n_connection_set_read_fd(struct s2n_connection *conn, int readfd);
S2N_API extern int s2n_connection_set_write_fd(struct s2n_connection *conn, int writefd);
S2N_API extern int s2n_connection_get_read_fd(struct s2n_connection *conn, int *readfd);
S2N_API extern int s2n_connection_get_write_fd(struct s2n_connection *conn, int *writefd);
S2N_API extern int s2n_connection_use_corked_io(struct s2n_connection *conn);
typedef int s2n_recv_fn(void *io_context, uint8_t *buf, uint32_t len);
typedef int s2n_send_fn(void *io_context, const uint8_t *buf, uint32_t len);
S2N_API extern int s2n_connection_set_recv_ctx(struct s2n_connection *conn, void *ctx);
S2N_API extern int s2n_connection_set_send_ctx(struct s2n_connection *conn, void *ctx);
S2N_API extern int s2n_connection_set_recv_cb(struct s2n_connection *conn, s2n_recv_fn recv);
S2N_API extern int s2n_connection_set_send_cb(struct s2n_connection *conn, s2n_send_fn send);
S2N_API extern int s2n_connection_prefer_throughput(struct s2n_connection *conn);
S2N_API extern int s2n_connection_prefer_low_latency(struct s2n_connection *conn);
S2N_API extern int s2n_connection_set_recv_buffering(struct s2n_connection *conn, bool enabled);
S2N_API extern uint32_t s2n_peek_buffered(struct s2n_connection *conn);
typedef enum {
    S2N_NOT_BLOCKED = 0,
    S2N_BLOCKED_ON_READ,
    S2N_BLOCKED_ON_WRITE,
    S2N_BLOCKED_ON_APPLICATION_INPUT,
    S2N_BLOCKED_ON_EARLY_DATA,
} s2n_blocked_status;
S2N_API extern int s2n_negotiate(struct s2n_connection *conn, s2n_blocked_status *blocked);
S2N_API extern ssize_t s2n_recv(struct s2n_connection *conn, void *buf, ssize_t size, s2n_blocked_status *blocked);
S2N_API extern uint32_t s2n_peek(struct s2n_connection *conn);
S2N_API extern int s2n_connection_release_buffers(struct s2n_connection *conn);